maybe fixed on safari?

--- a/css/elems.css
+++ b/css/elems.css
@@ -63,6 +63,7 @@
     width: 100%;
     background-size: auto 100%;
     transition-timing-function: ease-in;
+    opacity: 0;
 }
 .vehicle[data-vehicleDirection="left"] {
     background-position-x: left;
